--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ tokio = { version = "1", features = ["full"] }
 warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+handle-errors = { path = "handle-errors" }
+log = "0.4"
+log4rs = "1.0"
+uuid = { version = "0.8", features = ["v4"] }
