--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "qa-server"
+name = "practical-rust-book"
 version = "0.1.0"
 edition = "2021"
 
@@ -11,6 +11,6 @@ warp = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 handle-errors = { path = "handle-errors" }
-log = "0.4"
-log4rs = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
+tracing = { version = "0.1", features = ["log"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
